--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser-dynamic": "2.1.1",
     "@angular/platform-server": "2.1.1",
     "@ionic/storage": "1.1.6",
+    "cordova-android": "^6.2.3",
+    "cordova-ios": "^4.4.0",
     "ionic-angular": "2.0.0-rc.3",
     "ionic-native": "2.2.3",
     "ionicons": "3.0.0",
@@ -25,7 +27,9 @@
     "zone.js": "0.6.26"
   },
   "devDependencies": {
-    "@ionic/app-scripts": "0.0.45",
+    "@ionic/app-scripts": "^1.3.7",
+    "@ionic/cli-plugin-cordova": "1.2.1",
+    "@ionic/cli-plugin-ionic-angular": "1.2.0",
     "typescript": "2.0.6"
   },
   "cordovaPlugins": [
@@ -37,5 +41,11 @@
     "cordova-plugin-splashscreen"
   ],
   "cordovaPlatforms": [],
-  "description": "ionreddit: An Ionic project"
+  "description": "ionreddit: An Ionic project",
+  "cordova": {
+    "platforms": [
+      "android",
+      "ios"
+    ]
+  }
 }
